# ever-node

./: .gitignore  .gitmodules  CHANGELOG.md  CODEOWNERS  Cargo.toml  Cargo.toml.package  Cargo.toml.workspace  README.md  build.rs  build.sh  change-deps.py  commit_hash.txt  config.md  config_devnet.json  config_tstnet.json  default_config.json  deps_map.json  kafka-config.json  to-git.sh  to-local.sh  ton-global.config.json
catchain/: Cargo.toml  README.md
catchain/src/: activity_node.rs  block.rs  block_payload.rs  catchain.rs  catchain_network.rs  database.rs  inmem_overlay.rs  lib.rs  log_player.rs  profiling.rs  received_block.rs  receiver.rs  receiver_source.rs  utils.rs
catchain/src/utils/: metrics.rs
catchain/tests/: test_catchain.rs  test_hash.rs  test_log_replay.rs  test_received_block.rs  test_receiver.rs  test_receiver_many_sources.rs  test_ton_structs.rs
configs/: default_config.json  default_config_cinet.json  default_config_devnet.json  default_config_mainet.json  default_config_mainet_initblock.json  default_config_mainet_initblock_test.json  default_config_mainet_test.json  default_config_priv2.json  default_config_privatnet.json  default_config_tstnet.json  ton-global.config-cinet.json  ton-global.config-devnet.json  ton-global.config-mainet-initblock-test.json  ton-global.config-priv2.json  ton-global.config-privatnet.json  ton-global.config.json
docker/: README-configs.md  build.sh  download_src.py  entrypoint.sh
new-consensus/: smft-spec.md  ton-new-consensus-security.txt
src/: block.rs  block_proof.rs  boot.rs  build.rs  collator_test_bundle.rs  config.rs  db.rs  engine.rs  engine_operations.rs  engine_traits.rs  error.rs  ext_messages.rs  jaeger.rs  lib.rs  macros.rs  main.rs  mesh_queues_keeper.rs  node_network_stub.rs  out_msg_queue.rs  shard_blocks.rs  shard_blocks_fast_finality.rs  shard_state.rs  shard_states_keeper.rs  sync.rs  test_helper.rs  validating_utils.rs
src/collator/: collator.rs  limits.rs  mod.rs
src/db/: block_handle.rs  mod.rs
src/external_db/: kafka_consumer.rs  kafka_producer.rs  mod.rs  processor.rs  stub_producer.rs
src/full_node/: apply_block.rs  counters.rs  mesh_client.rs  mod.rs  remp_client.rs  shard_client.rs  state_helper.rs  telemetry.rs
src/internal_db/: index.rs  mod.rs  restore.rs  state_gc_resolver.rs  update.rs
src/network/: catchain_client.rs  control.rs  full_node_client.rs  full_node_service.rs  mod.rs  neighbours.rs  node_network.rs  node_network_stub.rs  remp.rs  telemetry.rs
src/rng/: mod.rs  random.rs
src/tests/: test_block.rs  test_block_proof.rs  test_control.rs  test_engine.rs  test_ext_messages.rs  test_helper.rs  test_internal_db.rs  test_remp_client.rs  test_shard_blocks.rs  test_shard_state.rs  test_sync.rs  test_telemetry.rs
src/types/: accounts.rs  awaiters_pool.rs  limits.rs  lockfree_cache.rs  messages.rs  mod.rs  mpmc_channel.rs  shard_blocks_observer.rs  top_block_descr.rs
src/validator/: 1  Elector.abi.json  accept_block.rs  candidate_db.rs  catchain_overlay.rs  collator.rs  collator_sync.rs  fabric.rs  log_parser.rs  message_cache.rs  mod.rs  mutex_wrapper.rs  out_msg_queue.rs  out_msg_queue_cleaner.rs  reliable_message_queue.rs  remp_block_parser.rs  remp_catchain.rs  remp_manager.rs  remp_service.rs  sessions_computing.rs  slashing.rs  telemetry.rs  validate_query.rs  validator_group.rs  (+6 more)
storage/: Cargo.toml
storage/benches/: shardstate_db.rs
storage/src/: block_db.rs  block_handle_db.rs  block_index_db.rs  block_info_db.rs  catchain_persistent_db.rs  cell_db.rs  dynamic_boc_db.rs  dynamic_boc_diff.rs  dynamic_boc_diff_writer.rs  dynamic_boc_rc_db.rs  error.rs  index.rs  lib.rs  lt_db.rs  lt_desc_db.rs  macros.rs  node_state_db.rs  shard_top_blocks_db.rs  shardstate_db.rs  shardstate_db_async.rs  shardstate_persistent_db.rs  status_db.rs  traits.rs
storage/src/archives/: archive_manager.rs  archive_slice.rs  file_maps.rs  mod.rs  package.rs  package_entry.rs  package_entry_id.rs  package_entry_meta.rs  package_entry_meta_db.rs  package_id.rs  package_index_db.rs  package_info.rs  package_offsets_db.rs  package_status_db.rs  package_status_key.rs
storage/src/archives/tests/: test_archive_manager.rs  test_archive_slice.rs  test_package.rs  test_package_entry_id.rs  test_package_id.rs
storage/src/archives/tests/testdata/: archive.00000-2.pack.gold  archive.00000.pack.gold  archive.00001.pack.gold  archive.00100.pack.gold  archive.00200.pack.gold  key.archive.000000.pack
storage/src/db/: async_adapter.rs  filedb.rs  memorydb.rs  mod.rs  rocksdb.rs
storage/src/db/tests/: destroy_db.rs  mod.rs  test_filedb.rs  test_memorydb.rs  test_rocksdb.rs
storage/src/db/traits/: async_traits.rs  db_key.rs  mod.rs  sync_traits.rs
storage/src/tests/: mod.rs  test_block_db.rs  test_block_handle_db.rs  test_catchain_persistent_db.rs  test_cell_db.rs  test_dynamic_boc_db.rs  test_dynamic_boc_rc_db.rs  test_shardstate_db_async.rs
storage/src/tests/testdata/: 2467080  2467081  2467082  2467083  2467084  2467085  2467086  2467087  2467088  2467089  2467090  2467091  2467092  2467093  2467094  2467095  2467096  2467097  2467098  2467099  2467100  2467101  2467102  2467103  2467104  2467105  2467106  2467107  2467108  2467109  2467110  2467111  2467112  2467113  2467114  2467115  2467116  2467117  2467118  2467119
storage/src/types/: block_handle.rs  block_id.rs  block_meta.rs  cell_id.rs  complex_id.rs  db_slice.rs  lt_db_entry.rs  lt_db_key.rs  lt_desc.rs  mod.rs  reference.rs  shard_ident_key.rs  status_key.rs  storage_cell.rs
storage/src/types/tests/: mod.rs  test_block_id.rs  test_serialization.rs  test_storage_cell.rs
tests/: setup_test_paths.sh
validator-session/: Cargo.toml  README.md
validator-session/src/: block_candidate.rs  cache.rs  lib.rs  old_round.rs  round.rs  round_attempt.rs  sent_block.rs  session.rs  session_description.rs  session_processor.rs  session_state.rs  slashing.rs  task_queue.rs  utils.rs  vector.rs  vector_bool.rs  vote_candidate.rs
validator-session/tests/: test_dynamic_timeout.rs  test_fast_session.rs  test_hash.rs
(+140 files in other folders)
