[package]
build = 'common/build/build.rs'
edition = '2021'
name = 'ton_node'
version = '0.56.3'

[workspace]
members = [ 'storage' ]

[[bin]]
name = 'adnl_resolve'
path = 'bin/adnl_resolve.rs'

[[bin]]
name = 'adnl_ping'
path = 'bin/adnl_ping.rs'

[[bin]]
name = 'console'
path = 'bin/console.rs'

[[bin]]
name = 'dhtscan'
path = 'bin/dhtscan.rs'

[[bin]]
name = 'gendht'
path = 'bin/gendht.rs'

[[bin]]
name = 'keygen'
path = 'bin/keygen.rs'

[[bin]]
name = 'keyid'
path = 'bin/keyid.rs'

[[bin]]
name = 'print'
path = 'bin/print.rs'

[[bin]]
name = 'zerostate'
path = 'bin/zerostate.rs'

[dependencies]
arc-swap = '0.3.11'
async-recursion = '0.3.2'
async-trait = '0.1.22'
bitflags = '1.2.1'
chrono = '=0.4.19'
clap = '2.33'
colored = '1.9.3'
crossbeam-channel = '0.4.2'
ctrlc = { features = [ 'termination' ], version = '3.4.0' }
dashmap = '5.4.0'
dirs = '2.0.2'
enum-as-inner = '=0.5.1'
env_logger = '0.7.1'
failure = '0.1'
futures = '0.3.1'
futures-timer = '3.0.1'
hex = '0.4'
lazy_static = '1.4.0'
log = '0.4'
log4rs = '1.2'
log4rs-rolling-file = '0.2.0'
metrics = '0.21.0'
metrics-exporter-prometheus = { optional = true, version = '0.12.1' }
metrics-exporter-statsd = { optional = true, version = '0.5.0' }
num-bigint = '0.4'
num_cpus = '1.13'
openssl = '0.10.35'
parking_lot = '0.12'
rand = '0.7'
regex = '^1.3.0'
serde = '1.0.105'
serde_derive = '1.0.105'
serde_json = '1.0.64'
shell-words = '1.0'
spin = '0.7.1'
statsd = { optional = true, version = '0.15' }
stream-cancel = '0.8.0'
string-builder = '^0.2.0'
tokio = { features = [ 'rt-multi-thread' ], version = '1.5' }
tokio-util = '0.7'
adnl = { features = [ 'client', 'node', 'server' ], git = 'https://github.com/tonlabs/ever-adnl.git', tag = '0.10.2' }
catchain = { path = 'catchain' }
dht = { git = 'https://github.com/tonlabs/ever-dht.git', tag = '0.6.96' }
lockfree = { git = 'https://github.com/tonlabs/lockfree.git' }
overlay = { git = 'https://github.com/tonlabs/ever-overlay.git', tag = '0.7.27' }
rldp = { git = 'https://github.com/tonlabs/ever-rldp.git', tag = '0.8.21' }
storage = { path = 'storage' }
ton_abi = { git = 'https://github.com/tonlabs/ever-abi.git', optional = true, tag = '2.4.16' }
ton_api = { git = 'https://github.com/tonlabs/ever-tl.git', package = 'ton_api', tag = '0.3.62' }
ton_block = { git = 'https://github.com/tonlabs/ever-block.git', tag = '1.9.126' }
ton_block_json = { git = 'https://github.com/tonlabs/ever-block-json.git', tag = '0.7.215' }
ton_executor = { git = 'https://github.com/tonlabs/ever-executor.git', tag = '1.16.112' }
ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = '2.0.33' }
ton_vm = { git = 'https://github.com/tonlabs/ever-vm.git', tag = '1.9.9' }
validator_session = { path = 'validator-session' }

[dev-dependencies]
async-trait = '0.1'
difference = '2.0'
ed25519-dalek = '1.0.1'
external-ip = '4.1.0'
pretty_assertions = '1.3'
tokio = { features = [ 'macros' ], version = '1.5' }

[features]
default = [ 'telemetry' ]
export_key = [ 'catchain/export_key', 'ton_types/export_key' ]
external_db = [ 'rdkafka' ]
gosh = [ 'ton_block/gosh', 'ton_vm/gosh' ]
log_metrics = [  ]
prometheus = [ 'metrics-exporter-prometheus', 'log_metrics' ]
signature_with_id = [ 'ton_block/signature_with_id', 'ton_vm/signature_with_id', 'ton_executor/signature_with_id' ]
slashing = [ 'ton_abi', 'validator_session/slashing' ]
statsd = [ 'metrics-exporter-statsd', 'log_metrics', 'dep:statsd' ]
telemetry = [ 'adnl/telemetry', 'dht/telemetry', 'rldp/telemetry', 'overlay/telemetry', 'storage/telemetry' ]
trace_alloc = [  ]
trace_alloc_detail = [ 'trace_alloc' ]
fast_finality_extra = [  ]

[profile]

[target.'cfg(unix)'.dependencies.rdkafka]
optional = true
version = '0.26.0'

[target.'cfg(windows)'.dependencies.rdkafka]
features = [ 'cmake_build' ]
optional = true
version = '0.26.0'
