[package]
build = 'common/build/build.rs'
edition = '2021'
name = 'ever-node'
version = '0.58.3'

[workspace]
members = [ 'storage' ]

[[bin]]
name = 'adnl_resolve'
path = 'bin/adnl_resolve.rs'

[[bin]]
name = 'adnl_ping'
path = 'bin/adnl_ping.rs'

[[bin]]
name = 'console'
path = 'bin/console.rs'

[[bin]]
name = 'dhtscan'
path = 'bin/dhtscan.rs'

[[bin]]
name = 'gendht'
path = 'bin/gendht.rs'

[[bin]]
name = 'keygen'
path = 'bin/keygen.rs'

[[bin]]
name = 'keyid'
path = 'bin/keyid.rs'

[[bin]]
name = 'print'
path = 'bin/print.rs'

[[bin]]
name = 'zerostate'
path = 'bin/zerostate.rs'

[dependencies]
arc-swap = '0.3.11'
async-recursion = '0.3.2'
async-trait = '0.1.22'
bitflags = '1.2.1'
chrono = '=0.4.19'
clap = '2.33'
colored = '1.9.3'
crossbeam-channel = '0.4.2'
ctrlc = { features = [ 'termination' ], version = '3.4.0' }
dashmap = '5.4.0'
deflate = '1.0.0'
dirs = '2.0.2'
enum-as-inner = '=0.5.1'
env_logger = '0.7.1'
failure = '0.1'
futures = '0.3.1'
futures-timer = '3.0.1'
hex = '0.4'
inflate = '0.4.5'
lazy_static = '1.4.0'
log = '0.4'
log4rs = '1.2'
log4rs-rolling-file = '0.2.0'
metrics = '0.21.0'
metrics-exporter-prometheus = { optional = true, version = '0.12.1' }
metrics-exporter-statsd = { optional = true, version = '0.5.0' }
num-bigint = '0.4'
num_cpus = '1.13'
openssl = '0.10.35'
parking_lot = '0.12'
rand = '0.7'
regex = '^1.3.0'
serde = '1.0.105'
serde_derive = '1.0.105'
serde_json = '1.0.64'
shell-words = '1.0'
spin = '0.7.1'
statsd = { optional = true, version = '0.15' }
stream-cancel = '0.8.0'
string-builder = '^0.2.0'
tokio = { features = [ 'rt-multi-thread' ], version = '1.5' }
tokio-util = '0.7'
adnl = { features = [ 'client', 'node', 'server' ], git = 'https://github.com/everx-labs/ever-adnl.git', tag = '0.10.22' }
catchain = { path = 'catchain' }
ever_abi = { git = 'https://github.com/everx-labs/ever-abi.git', tag = '2.5.1' }
ever_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.10.0' }
ever_block_json = { git = 'https://github.com/everx-labs/ever-block-json.git', tag = '0.8.3' }
ever_executor = { git = 'https://github.com/everx-labs/ever-executor.git', tag = '1.17.3' }
ever_vm = { git = 'https://github.com/everx-labs/ever-vm.git', tag = '2.1.2' }
lockfree = { git = 'https://github.com/everx-labs/lockfree.git' }
storage = { path = 'storage' }
ton_api = { git = 'https://github.com/everx-labs/ever-tl.git', package = 'ton_api', tag = '0.3.77' }
validator_session = { path = 'validator-session' }

[dev-dependencies]
async-trait = '0.1'
difference = '2.0'
ed25519-dalek = '1.0.1'
external-ip = '4.1.0'
pretty_assertions = '1.3'
tokio = { features = [ 'macros' ], version = '1.5' }

[features]
default = [ 'telemetry', 'ever_block/export_key' ]
export_key = [ 'catchain/export_key', 'ever_block/export_key' ]
external_db = [ 'rdkafka' ]
fast_finality_extra = [  ]
gosh = [ 'ever_block/gosh', 'ever_vm/gosh' ]
log_metrics = [  ]
prometheus = [ 'metrics-exporter-prometheus', 'log_metrics' ]
signature_with_id = [ 'ever_block/signature_with_id', 'ever_vm/signature_with_id', 'ever_executor/signature_with_id' ]
slashing = [ 'validator_session/slashing' ]
statsd = [ 'metrics-exporter-statsd', 'log_metrics', 'dep:statsd' ]
telemetry = [ 'adnl/telemetry', 'storage/telemetry' ]
trace_alloc = [  ]
trace_alloc_detail = [ 'trace_alloc' ]
verification = [ 'ever_block/export_key' ]

[profile]

[target.'cfg(unix)'.dependencies.rdkafka]
optional = true
version = '0.26.0'

[target.'cfg(windows)'.dependencies.rdkafka]
features = [ 'cmake_build' ]
optional = true
version = '0.26.0'

