[package]
build = 'common/build/build.rs'
edition = '2021'
name = 'ever-node'
version = '0.60.8'

[workspace]

[[bin]]
name = 'adnl_resolve'
path = 'bin/adnl_resolve.rs'

[[bin]]
name = 'adnl_ping'
path = 'bin/adnl_ping.rs'

[[bin]]
name = 'console'
path = 'bin/console.rs'

[[bin]]
name = 'dhtscan'
path = 'bin/dhtscan.rs'

[[bin]]
name = 'gendht'
path = 'bin/gendht.rs'

[[bin]]
name = 'keygen'
path = 'bin/keygen.rs'

[[bin]]
name = 'keyid'
path = 'bin/keyid.rs'

[[bin]]
name = 'print'
path = 'bin/print.rs'

[[bin]]
name = 'zerostate'
path = 'bin/zerostate.rs'

[dependencies]
anyhow = '1.0'
async-recursion = '1.1'
async-trait = '0.1'
bitflags = '2.6'
chrono = '0.4'
clap = '2.33'
colored = '1.9'
crossbeam-channel = '0.5'
ctrlc = { features = [ 'termination' ], version = '3.4' }
dashmap = '5.4'
deflate = '1.0'
dirs = '2.0'
enum-as-inner = '0.6'
env_logger = '0.11'
futures = '0.3'
futures-timer = '3.0'
hex = '0.4'
inflate = '0.4'
lazy_static = '1.4'
log = '0.4'
log4rs = { features = [ 'rolling_file_appender' ], version = '1.3' }
metrics = '0.21'
metrics-exporter-prometheus = { optional = true, version = '0.12' }
metrics-exporter-statsd = { optional = true, version = '0.5' }
num-bigint = '0.4'
num_cpus = '1.13'
openssl = '0.10'
parking_lot = '0.12'
rand = '0.8'
regex = '1.10'
serde = '1.0'
serde_derive = '1.0'
serde_json = '1.0'
shell-words = '1.0'
smallvec = { features = [ 'const_new', 'union', 'write' ], version = '1.10' }
spin = '0.7'
statsd = { optional = true, version = '0.15' }
stream-cancel = '0.8'
string-builder = '0.2'
thiserror = '1.0'
tokio = { features = [ 'rt-multi-thread' ], version = '1.40' }
tokio-util = '0.7'
adnl = { features = [ 'client', 'node', 'server' ], git = 'https://github.com/everx-labs/ever-adnl.git', tag = '0.11.32' }
catchain = { path = 'catchain' }
ever_abi = { git = 'https://github.com/everx-labs/ever-abi.git', tag = '2.7.11' }
ever_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.11.20' }
ever_block_json = { git = 'https://github.com/everx-labs/ever-block-json.git', tag = '0.9.37' }
ever_executor = { git = 'https://github.com/everx-labs/ever-executor.git', tag = '1.18.22' }
ever_vm = { git = 'https://github.com/everx-labs/ever-vm.git', tag = '2.2.21' }
lockfree = { git = 'https://github.com/everx-labs/lockfree.git' }
storage = { path = 'storage' }
ton_api = { git = 'https://github.com/everx-labs/ever-tl.git', package = 'ton_api', tag = '0.4.29' }
validator_session = { path = 'validator-session' }

[dev-dependencies]
difference = '2.0'
external-ip = '5.0'
pretty_assertions = '1.3'
tokio = { features = [ 'macros' ], version = '1.5' }

[features]
default = [ 'telemetry', 'ever_block/export_key', 'validator_session/export_key' ]
export_key = [ 'catchain/export_key', 'ever_block/export_key' ]
external_db = [ 'rdkafka' ]
fast_finality_extra = [  ]
gosh = [ 'ever_block/gosh', 'ever_vm/gosh' ]
log_metrics = [  ]
only_sorted_clean = [  ]
prometheus = [ 'metrics-exporter-prometheus', 'log_metrics' ]
signature_with_id = [ 'ever_block/signature_with_id', 'ever_vm/signature_with_id', 'ever_executor/signature_with_id' ]
slashing = [ 'validator_session/slashing' ]
statsd = [ 'metrics-exporter-statsd', 'log_metrics', 'dep:statsd' ]
telemetry = [ 'adnl/telemetry', 'storage/telemetry' ]
trace_alloc = [  ]
trace_alloc_detail = [ 'trace_alloc' ]
verification = [ 'ever_block/export_key' ]

[profile]

[target.'cfg(unix)'.dependencies.rdkafka]
optional = true
version = '0.26.0'

[target.'cfg(windows)'.dependencies.rdkafka]
features = [ 'cmake_build' ]
optional = true
version = '0.26.0'

