[package]
build = '../common/build/build.rs'
edition = '2021'
name = 'catchain'
version = '0.1.0'

[dependencies]
chrono = '0.4.10'
crossbeam = '0.7.3'
failure = '0.1'
futures = '0.3.4'
hex = '0.4'
lazy_static = '1.4.0'
log = '0.4'
metrics = '0.21.0'
metrics-core = '0.5.2'
metrics-util = '0.15.0'
quanta = '0.11.1'
rand = '0.8'
regex = '1.3.1'
tokio = { features = [ 'rt-multi-thread' ], version = '1.5' }
adnl = { features = [ 'node' ], git = 'https://github.com/tonlabs/ever-adnl.git', tag = 'pre_lightweight' }
storage = { path = '../storage' }
ton_api = { git = 'https://github.com/tonlabs/ever-tl.git', package = 'ton_api', tag = 'pre_lightweight' }
ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = 'pre_lightweight' }

[dev-dependencies]
chrono = '0.4.10'
env_logger = '0.7.1'
pretty_assertions = '1.3'
rocksdb = '0.21'

[features]
default = [  ]
export_key = [ 'ton_types/export_key' ]

