[package]
build = '../common/build/build.rs'
edition = '2021'
name = 'catchain'
version = '0.1.0'

[dependencies]
chrono = '0.4.10'
crossbeam = '0.7.3'
failure = '0.1'
futures = '0.3.4'
hex = '0.4'
lazy_static = '1.4.0'
log = '0.4'
metrics = '0.21.0'
metrics-util = '0.15.0'
quanta = '0.11.1'
rand = '0.8'
regex = '1.3.1'
tokio = { features = [ 'rt-multi-thread' ], version = '1.5' }
adnl = { features = [ 'node' ], git = 'https://github.com/everx-labs/ever-adnl.git', tag = '0.10.26' }
ever_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.10.4' }
storage = { path = '../storage' }
ton_api = { git = 'https://github.com/everx-labs/ever-tl.git', package = 'ton_api', tag = '0.3.82' }

[dev-dependencies]
chrono = '0.4.10'
env_logger = '0.7.1'
pretty_assertions = '1.3'
rocksdb = '0.21'

[features]
default = [  ]
export_key = [ 'ever_block/export_key' ]

