[package]
build = '../common/build/build.rs'
edition = '2021'
name = 'catchain'
version = '0.1.1'

[dependencies]
anyhow = '1.0'
chrono = '0.4'
crossbeam = '0.8'
futures = '0.3'
hex = '0.4'
lazy_static = '1.4'
log = '0.4'
metrics = '0.21'
metrics-util = '0.15'
quanta = '0.11'
rand = '0.8'
regex = '1.10'
tokio = { features = [ 'rt-multi-thread' ], version = '1.40' }
adnl = { features = [ 'node' ], git = 'https://github.com/everx-labs/ever-adnl.git', tag = '0.11.30' }
ever_block = { git = 'https://github.com/everx-labs/ever-block.git', tag = '1.11.20' }
storage = { path = '../storage' }
ton_api = { git = 'https://github.com/everx-labs/ever-tl.git', package = 'ton_api', tag = '0.4.29' }

[dev-dependencies]
env_logger = '0.11'
pretty_assertions = '1.3'
rocksdb = '0.22'

[features]
default = [  ]
export_key = [ 'ever_block/export_key' ]

