[package]
edition = '2018'
name = 'storage'
version = '0.5.0'

[dependencies]
adnl = { git = 'https://github.com/tonlabs/ever-adnl.git', tag = '0.9.24' }
ahash = '0.8'
async-trait = '0.1.31'
bytes = '1.1.0'
failure = '0.1'
fnv = '1.0.6'
futures = '0.3.4'
hex = '0.4'
lazy_static = '1.4.0'
lockfree = { git = 'https://github.com/tonlabs/lockfree.git' }
log = '0.4'
log4rs = '1.2'
lru = '0.11.0'
metrics = '0.21.1'
parking_lot = '0.12.1'
quick_cache = '0.4.0'
rand = { features = [ 'small_rng' ], version = '0.8' }
rocksdb = '0.21'
serde = '1.0.114'
serde_cbor = '0.11.1'
serde_derive = '1.0.114'
strum = '0.18.0'
strum_macros = '0.18.0'
tokio = { features = [ 'fs', 'rt-multi-thread' ], version = '1.5' }
ton_api = { git = 'https://github.com/tonlabs/ever-tl.git', package = 'ton_api', tag = '0.3.61' }
ton_block = { git = 'https://github.com/tonlabs/ever-block.git', tag = '1.9.126' }
ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = '2.0.33' }

[build-dependencies]
cc = { features = [ 'parallel' ], version = '1.0.61' }

[features]
default = [  ]
telemetry = [  ]

[[bench]]
harness = false
name = 'shardstate_db'
path = 'benches/shardstate_db.rs'

